package com.yaseminyumak.culinarygraphbackend.catalog.domain;

public enum Season {
	SPRING, SUMMER, FALL, WINTER, YEAR_ROUND
}
