package com.yaseminyumak.culinarygraphbackend.recipe.domain;

/**
 * Recipe difficulty level.
 */
public enum DifficultyLevel {
	EASY,
	MEDIUM,
	HARD
}
