classDiagram
    direction LR

    %% CulinaryGraph — JPA persistence view
    %% PublishStatus omitted. Technique has no self-relation in this diagram.

    class RecipeEntity {
        UUID id
        String title
        String description
        DifficultyLevel difficulty
        Integer durationMinutes
        String createdBy
        Instant createdAt
        Instant updatedAt
        String country
        List tags
        String originStory
        Set associatedTechniqueIds
        +getStepEntities()
        +getIngredientEntities()
        +getAssociatedTechniqueIds()
    }

    class RecipeStepEntity {
        UUID id
        int stepOrder
        String instruction
    }

    class RecipeIngredientEntity {
        UUID id
        String name
        String quantity
        String unit
        UUID ingredientId
        +getIngredientId()
    }

    class TechniqueEntity {
        UUID id
        String name
        String description
        String region
        DifficultyLevel difficulty
        String country
        String culturalNotes
        String prerequisites
        String createdBy
        Instant createdAt
        Instant updatedAt
        +getStepEntities()
        +getIngredientEntities()
    }

    class TechniqueStepEntity {
        UUID id
        int stepOrder
        String instruction
    }

    class IngredientEntity {
        UUID id
        String name
        String description
        String region
        Set seasons
        List substitutes
        String provenanceStory
        String country
        String createdBy
        Instant createdAt
        Instant updatedAt
        +getRelatedTechniques()
    }

    class CommentEntity {
        UUID id
        String entityType
        UUID entityId
        String username
        String body
        Instant createdAt
        +getBody()
    }

    class LikeEntity {
        UUID id
        String entityType
        UUID entityId
        String username
        Instant createdAt
    }

    class DifficultyLevel {
        <<enumeration>>
        EASY
        MEDIUM
        HARD
    }

    class Season {
        <<enumeration>>
        SPRING
        SUMMER
        AUTUMN
        WINTER
    }

    RecipeEntity "1" *-- "0..*" RecipeStepEntity : steps
    RecipeEntity "1" *-- "0..*" RecipeIngredientEntity : ingredientLines
    RecipeEntity ..> TechniqueEntity : associatedTechniqueIds

    TechniqueEntity "1" *-- "0..*" TechniqueStepEntity : steps
    TechniqueEntity "0..*" -- "0..*" IngredientEntity : techniqueIngredients

    RecipeIngredientEntity ..> IngredientEntity : optional ingredientId

    CommentEntity ..> RecipeEntity : RECIPE
    CommentEntity ..> TechniqueEntity : TECHNIQUE
    CommentEntity ..> IngredientEntity : INGREDIENT

    LikeEntity ..> RecipeEntity : RECIPE
    LikeEntity ..> TechniqueEntity : TECHNIQUE
    LikeEntity ..> IngredientEntity : INGREDIENT

    RecipeEntity --> DifficultyLevel
    TechniqueEntity --> DifficultyLevel
    IngredientEntity --> Season
